# remote-dev-control

./: .gitignore  CLAUDE.md  LICENSE  README.md  SETUP.md  TODO.md  design_knowledge_system.md  design_orchestrator.md  design_persistent_memory_and_voice.md  install.sh  mcp-config.json  pyproject.toml  rdc.yml
.ai/: browser-context-design.md  context.md  learnings.md  worker-design.md
.github/workflows/: publish.yml
docs/: VISUAL_STREAMING_COMPLETE.md  ai-agent-guide.md  configuration.md  frontend-live-spec.md  human-guide.md  mcp-setup.md  one-loop-dev-cycle.md  remote-desktop-agent-plan.md  visual-streaming-quickstart.md  visual-streaming.md
docs/architecture/: autonomous-mode.md  data-layer.md  phone-calling.md  security-audit-findings.md  security-audit.md  state-machine.md  v2-next-session.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: collection-picker.tsx  global-text-input.tsx  project-bar.tsx  toast.tsx
frontend/src/hooks/: use-browser-agent.ts  use-channel-send.ts  use-file-upload.ts  use-mount-effect.ts  use-orchestrator.ts  use-voice.ts  use-workstream-voice.ts
frontend/src/layouts/: desktop.tsx  kiosk.tsx  mobile.tsx
frontend/src/lib/: agent-presets.ts  api.ts  chat-catalog.ts  chat-components.tsx  client-id.ts  orchestrator-dispatch.ts  utils.ts  ws.ts
frontend/src/stores/: agent-run-store.ts  auth-store.ts  browser-store.ts  channel-store.ts  dictation-store.ts  logs-store.ts  pinchtab-store.ts  process-store.ts  project-store.ts  state-store.ts  terminal-presets-store.ts  terminal-store.ts  ui-store.ts
frontend/src/types/: index.ts
scripts/: rdc-launch.sh
src/gwd/: __init__.py  __main__.py  classify.py  client.py  executor.py  orchestrator.py  planner.py  prompts.py  tools.py  types.py  verifier.py
src/remote_dev_ctrl/: __init__.py  cli.py  indexer.py  llm.py  models.py  scaffold.py  skill_executor.py  skills.py  store.py  watcher.py
src/remote_dev_ctrl/mcp/: __init__.py  server.py
src/remote_dev_ctrl/server/: __init__.py  actions.py  app.py  audit.py  auth.py  browser.py  browser_use.py  caddy.py  channel_manager.py  chrome.py  collections_page.py  config.py  context_synthesizer.py  conversation.py  dashboard.py  debug_page.py  event_store.py  intent.py  knowledge.py  middleware.py  orchestrator.py  pinchtab.py  ports.py  process_discovery.py  processes.py  pty_relay.py  recipes.py  recording.py  scrubber.py  session_manager.py  tts.py  (+10 more)
tests/: test_visual_streaming.py
(+108 files in other folders)
